--- a/src/password-generator/generator.html
+++ b/src/password-generator/generator.html
@@ -12,27 +12,27 @@
 
     <meta property="og:title" content="Password Generator - Create Strong & Secure Passwords Instantly">
     <meta property="og:description" content="A free password generator to instantly create strong, random, and secure passwords. Customize length and character types to meet your needs.">
-    <meta property="og:image" content="./assets/preview.png">
+    <meta property="og:image" content="../../assets/preview.png">
     <meta property="og:url" content="https://atia-farha.github.io/password-website/src/password-generator/generator.html">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Password Generator - Create Strong & Secure Passwords Instantly">
     <meta name="twitter:description" content="A free password generator to instantly create strong, random, and secure passwords. Customize length and character types to meet your needs.">
-    <meta name="twitter:image" content="./assets/preview.png">
+    <meta name="twitter:image" content="../../assets/preview.png">
 
-    <link rel="icon" type="image/svg+xml" href="./assets/favicons/favicon.svg">
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/favicons/favicon.ico" sizes="any">
-    <link rel="icon" type="image/png" href="./assets/favicons/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="./assets/favicons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="./assets/favicons/favicon-48x48.png" sizes="48x48">
-    <link rel="icon" type="image/png" href="./assets/favicons/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="./assets/favicons/favicon-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="./assets/favicons/favicon-512x512.png" sizes="512x512">
-    <link rel="apple-touch-icon" type="image/png" href="./assets/favicons/apple-touch-icon-57x57.png" sizes="57x57">
-    <link rel="apple-touch-icon" type="image/png" href="./assets/favicons/apple-touch-icon-72x72.png" sizes="72x72">
-    <link rel="apple-touch-icon" type="image/png" href="./assets/favicons/apple-touch-icon-114x114.png" sizes="114x114">
-    <link rel="apple-touch-icon" type="image/png" href="./assets/favicons/apple-touch-icon-180x180.png" sizes="180x180">
+    <link rel="icon" type="image/svg+xml" href="../../assets/favicons/favicon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="../../assets/favicons/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" href="../../assets/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="../../assets/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="../../assets/favicons/favicon-48x48.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="../../assets/favicons/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="../../assets/favicons/favicon-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="../../assets/favicons/favicon-512x512.png" sizes="512x512">
+    <link rel="apple-touch-icon" type="image/png" href="../../assets/favicons/apple-touch-icon-57x57.png" sizes="57x57">
+    <link rel="apple-touch-icon" type="image/png" href="../../assets/favicons/apple-touch-icon-72x72.png" sizes="72x72">
+    <link rel="apple-touch-icon" type="image/png" href="../../assets/favicons/apple-touch-icon-114x114.png" sizes="114x114">
+    <link rel="apple-touch-icon" type="image/png" href="../../assets/favicons/apple-touch-icon-180x180.png" sizes="180x180">
     <meta name="apple-mobile-web-app-title" content="Password Generator">
 
     <link rel="canonical" href="https://atia-farha.github.io/password-website/src/password-generator/generator.html">
@@ -42,16 +42,16 @@
 
     <meta name="theme-color" content="#0E2A47">
     
-    <link rel="stylesheet" href="./src/password-generator/generator.css">
-    <script src="./src/password-generator/generator.js" defer></script>
+    <link rel="stylesheet" href="generator.css">
+    <script src="generator.js" defer></script>
 </head>
 
 <body>
     <header>
         <h1>Password Generator</h1>
 
-        <a href="./index.html">
-            <img src="./assets/home-icon.svg" class="home-icon" alt="Home Icon">
+        <a href="../../index.html">
+            <img src="../../assets/home-icon.svg" class="home-icon" alt="Home Icon">
         </a>
     </header>
 
@@ -95,7 +95,7 @@
         <section class="result-container">
             <div class="copy-container">
                 <button id="copyBtn">
-                    <img src="./assets/copy.svg" width="15px" alt="Copy Icon">
+                    <img src="../../assets/copy.svg" width="15px" alt="Copy Icon">
                     Copy
                 </button>
             </div>
