--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 </head>
 
 <body>
-    <img src="./assets/world-map.svg" class="svg-img" alt="World Map SVG" width="100%" height="auto">
-
     <main>
+        <img src="./assets/world-map.svg" class="world-map" alt="World Map SVG" width="100%" height="auto">
+        
         <section class="section-1">
             <h1>
                 Protect Your Password,
@@ -74,7 +74,7 @@
     </main>
 
     <footer>
-        <img src="./assets/wave.svg" class="svg-img" alt="Wave SVG Design" width="100%" height="auto">
+        <img src="./assets/wave.svg" class="wave-design" alt="Wave SVG Design" width="100%" height="auto">
         <div class="footer-text">&copy; 2025 Atia Farha | All Rights Reserved</div>
     </footer>
 </body>
