--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <body>
     <main>
-        <img src="./assets/world-map.svg" class="world-map" alt="World Map SVG" width="100%" height="auto">
+        <img src="./assets/world-map.svg" class="world-map" alt="World Map SVG">
         
         <section class="section-1">
             <h1>
@@ -74,7 +74,7 @@
     </main>
 
     <footer>
-        <img src="./assets/wave.svg" class="wave-design" alt="Wave SVG Design" width="100%" height="auto">
+        <img src="./assets/wave.svg" class="wave-design" alt="Wave SVG Design">
         <div class="footer-text">&copy; 2025 Atia Farha | All Rights Reserved</div>
     </footer>
 </body>
